--- a/configuration.properties
+++ b/configuration.properties
@@ -12,3 +12,7 @@ homework01=https://testcenter.techproeducation.com/index.php?page=form-authentic
 
 #BlueRentCar
 app_home_url=https://www.bluerentalcars.com/
+ValidEmail=jack@gmail.com
+ValidPassword=12345
+InvalidEmail=Jack@gmail.com
+xyzBank_URL=https://www.globalsqa.com/angularJs-protractor/BankingProject/#/login
