--- a/configuration.properties
+++ b/configuration.properties
@@ -16,3 +16,8 @@ ValidEmail=jack@gmail.com
 ValidPassword=12345
 InvalidEmail=Jack@gmail.com
 xyzBank_URL=https://www.globalsqa.com/angularJs-protractor/BankingProject/#/login
+ziyadem_URL=https://www.ziyadem.de/
+ziyadem_pozitif_username=snbahar395@gmail.com
+ziyadem_pozitif_password=Snbhr123!
+ziyadem_negatif_username=snbahar395gmail.com
+
