--- a/configuration.properties
+++ b/configuration.properties
@@ -15,9 +15,15 @@ app_home_url=https://www.bluerentalcars.com/
 ValidEmail=jack@gmail.com
 ValidPassword=12345
 InvalidEmail=Jack@gmail.com
+
+#PRACTICE URL's
 xyzBank_URL=https://www.globalsqa.com/angularJs-protractor/BankingProject/#/login
 ziyadem_URL=https://www.ziyadem.de/
 ziyadem_pozitif_username=snbahar395@gmail.com
 ziyadem_pozitif_password=Snbhr123!
 ziyadem_negatif_username=snbahar395gmail.com
+saucedemo_url=https://www.saucedemo.com/
+saucedemo_username=standard_user
+saucedemo_password=secret_sauce
+medunna_url=https://medunna.com/
 
